# flutter-hadk

./: CMakeLists.txt  README.md
src/: common.h  flutter_hadk.cpp  flutter_hadk.h  main.cpp
src/flutter/: embedder.h
src/hadk/: hadk.h
src/hadk/binding/: binding.cpp  binding.h
src/hadk/include/hadk/: input.h  native_window.h
